# AdventOfCode

./: go.mod  go.sum
2021/day1/: main.go  main_test.go
2021/day10/: main_test.go
2021/day11/: main_test.go
2021/day2/: main.go  main_test.go
2021/day3/: main.go  main_test.go
2021/day4/: main.go
2021/day5/: main.go
2021/day6/: day6  main.go
2021/day9/: main.go
2022/: .iex.exs
2022/lib/: aoc.ex  day01.ex  day02.ex  day03.ex  day04.ex  day05.ex  day06.ex  day07.ex  day08.ex  day09.ex  day10.ex  day11.ex  day12.ex  day13.ex  day14.ex  day15.ex
2022/test/: day01_test.exs  day02_test.exs  day03_test.exs  day04_test.exs  day05_test.exs  day06_test.exs  day07_test.exs  day08_test.exs  day09_test.exs  day10_test.exs  day11_test.exs  day12_test.exs  day13_test.exs  day14.ex  day14_test.exs  day15_test.exs
2023/: Gemfile  main.rb
2023-py/: pyproject.toml
2023-py/AdventOfCode/Day01/: day01.py
2023/Day01/: day01.rb  day01_spec.rb
2023/day01/: day01.py
2023/day02/: day02.py
2023/day03/: day03.py
2023/day04/: day04.py
2023/day05/: day05.py  input.txt
2023/day06/: day06.py
day1/: main.go  main_test.go
day10/: main.go
day11/: main.go
day4/: main_test.go
day5/: main.go  main_test.go
day6/: main_test.go
day7/: main.go  main_test.go
day8/: main.go  main_test.go
utils/: utils.go
