[tool.poetry]
name = "AdventOfCode"
version = "0.1.0"
description = ""
authors = ["Nathan Gallet <nathan.gallet@thetrainline.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-lsp-server = "^1.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
